[gd_scene load_steps=10 format=2]

[ext_resource path="res://items/panel.jpg" type="Texture" id=1]
[ext_resource path="res://back/Panel.gd" type="Script" id=2]
[ext_resource path="res://items/magnet.png" type="Texture" id=3]
[ext_resource path="res://items/wheel.png" type="Texture" id=4]
[ext_resource path="res://items/bag.png" type="Texture" id=5]
[ext_resource path="res://items/key.png" type="Texture" id=6]
[ext_resource path="res://items/backpack.png" type="Texture" id=7]
[ext_resource path="res://menus/correct.wav" type="AudioStream" id=8]
[ext_resource path="res://menus/wrong.wav" type="AudioStream" id=9]

[node name="Panel" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Sprite" parent="."]
position = Vector2( 510.881, 300.373 )
rotation = -1.5708
scale = Vector2( 0.374184, 0.502762 )
texture = ExtResource( 1 )

[node name="Blue" type="Button" parent="panel"]
margin_left = -230.0
margin_top = -669.0
margin_right = 6.0
margin_bottom = -419.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="Button" parent="panel"]
margin_left = -232.033
margin_top = -153.019
margin_right = 3.96692
margin_bottom = 96.9813
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Green" type="Button" parent="panel"]
margin_left = -217.802
margin_top = 310.003
margin_right = 18.1983
margin_bottom = 560.003
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="."]
margin_left = -1.0
margin_top = 473.0
margin_right = 1026.0
margin_bottom = 603.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryBG" type="ColorRect" parent="Inventory"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 225.0
margin_top = 10.0
margin_right = 815.0
margin_bottom = 100.0
color = Color( 0.552941, 0.552941, 0.552941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bag" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 755.456, 45.5813 )
scale = Vector2( 0.05, 0.04 )
texture = ExtResource( 5 )

[node name="Wheel" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 599.716, 57.2354 )
scale = Vector2( 0.0472156, 0.0400875 )
texture = ExtResource( 4 )

[node name="Magnet" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 422.785, 49.8192 )
scale = Vector2( 0.05, 0.0422667 )
texture = ExtResource( 3 )

[node name="Key" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( 271.282, 55.1165 )
scale = Vector2( 0.05, 0.0422667 )
texture = ExtResource( 6 )

[node name="ToggleInventory" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 889.0
margin_top = 86.0
margin_right = 1925.0
margin_bottom = 999.0
rect_rotation = -90.0
rect_scale = Vector2( 0.07, 0.082 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Correct" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="panel/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="panel/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="panel/Green" to="." method="_on_Green_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="ToggleInventory" to="." method="_on_ToggleInventory_pressed"]
